# ai-platform-lab

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml  未命名.md
.claude/: launch.json  settings.json
.claude/agents/: code-review.md  eval-gate.md
.claude/init-templates/go/: .pre-commit-config.yaml  CLAUDE.md  Justfile
.claude/workflows/: ci-monitor.md
.cursor/rules/: agent-module-style.mdc  issue-driven-workflow.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  phase-task.yml
.github/workflows/: ci.yml  eval.yml  live-gate.yml  publish-sdk.yml
apps/console/: index.html
apps/gateway/: agent_lifecycle_routes.py  app_context.py  audit_action_routes.py  audit_routes.py  auth_routes.py  billing_routes.py  chat_routes.py  composition.py  console_routes.py  core_routes.py  embedding_routes.py  feedback_loop_routes.py  feedback_routes.py  harness_routes.py  hitl_routes.py  http_middleware.py  http_utils.py  lifespan.py  llm_proxy.py  llm_semantic_cache.py  main.py  mcp_routes.py  memory_routes.py  model_router.py  multi_agent_routes.py  orchestrator_routes.py  pii_routes.py  platform_adapter.py  platform_routes.py  prompt_experiment_routes.py  prompt_routes.py  quality_routes.py  quota.py  rate_limit.py  request_guards.py  request_pipeline.py  router_registry.py  sandbox_routes.py  settings.py  storage_routes.py  (+1 more)
apps/worker/: main.py
config/: agent.yaml  agent_tool_routing.yaml  agents.yaml  embedding_models.yaml  mcp_servers.yaml  mcp_tools.json  models.yaml  observability.yaml  orchestrator_workflows.yaml  otel-collector.yaml  prometheus.yml  prompts.yaml  providers.yaml  rag.yaml  rag_prompt.txt  regions.yaml  tenants.yaml  tool_classifications.yaml  tools_marketplace.yaml  upstream_models.yaml
config/plugins/: demo_echo.yaml
config/prometheus/: alerts.yml
config/workflows/: data_analysis.yaml
console-v2/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
console-v2/src/: App.tsx  index.css  main.tsx
console-v2/tests/: App.test.tsx  setup.ts
deploy/helm/: README.md  values-gpu.yaml  values-multi-az.yaml  values-prod.yaml
deploy/k8s/: chaos-test.yaml  gpu-node-pool.yaml  kustomization.yaml
docs/: AI中台学习执行手册.md  PROJECT_STATUS.md  agent-build-and-code-guide.md  architecture-deepening-todo.md  architecture.md  closure-sop.md  console-agent-planner.md  console-tenant-billing.md  demo-agent-vertical.md  demo-walkthrough.md  enterprise-ai-platform-sop.md  gap-analysis-diagram.md  gateway-build-and-code-guide.md  hardening-build-and-code-guide.md  interview-narrative.md  issues-backlog-phase-l.md  issues-backlog-phase-m.md  issues-backlog-phase-n.md  issues-backlog-phase-o.md  issues-backlog-phase-p.md  issues-backlog-phase-q.md  issues-backlog-phase-r.md  issues-backlog.md  local-llm-setup.md  observability-eval-build-and-code-guide.md  phase-a-build-and-code-guide.md  phase-a-internal-beta.md  phase-b-build-and-code-guide.md  phase-b-small-production.md  phase-b2-parallel.md  phase-b3-rerank-canary.md  phase-c-build-and-code-guide.md  phase-c-platform.md  phase-d-build-and-code-guide.md  phase-d-future-evolution.md  phase-d-ops.md  phase-e-agent-quality.md  phase-e-build-and-code-guide.md  phase-f-build-and-code-guide.md  phase-f-context-compress.md  (+70 more)
docs/adr/: 0001-three-id-boundaries.md  0002-checkpoint-resume-layers.md  0003-app-context-singletons.md  README.md
eval/: acceptance_smoke.py  agent_baseline.jsonl  agent_cot_smoke.py  agent_gate.py  agent_jd2_gate.py  agent_planner_smoke.py  agent_run.py  agent_vertical_smoke.py  auto_plan_vertical.py  auto_plan_vertical.sh  baseline.jsonl  canary_stats.py  data_analysis_vertical.py  data_analysis_vertical.sh  feedback_loop_demo.py  gate.py  gate_scaffold.py  grader.py  harness_baseline.jsonl  harness_capability_benchmark.py  harness_capability_gate.py  live_gate.py  live_gate.sh  load_smoke.py  long_horizon_smoke.py  multimodal_embedding_gate.py  multimodal_embedding_smoke.py  phase_q_live.py  pipeline.py  plan_baseline.jsonl  plan_quality_gate.py  platform_demo.sh  platform_wire.py  rag_multimodal_smoke.py  redis_quota_probe.py  report.py  run.py  sdk_multimodal_smoke.py  sdk_pypi_smoke.sh  sdk_smoke.py  (+1 more)
eval/baselines/: agent_gate_fixtures.jsonl  agent_scenarios.jsonl  agent_trajectory_gate.json  main_baseline.json  rag_extended.jsonl  safety.jsonl
samples/: analytics_demo.sql  chart.png.caption.txt
scripts/: check_no_packages_import_apps.sh  check_worker_no_gateway_rag.sh  harness-init.sh  setup-hooks.sh
sdk/python/: README.md  pyproject.toml
sdk/python/ai_platform_lab/: __init__.py  _base.py  client.py  exceptions.py
sdk/python/ai_platform_lab/resources/: __init__.py  agent.py  chat.py  embedding.py  memory.py  orchestrator.py  rag.py
tests/: __init__.py  conftest.py  gateway_client.py  test_agent_gate.py  test_agent_graph_execution_e2e.py  test_agent_jd2_gate.py  test_agent_lifecycle.py  test_agent_metrics.py  test_agent_perf.py  test_agent_planner.py  test_agent_plugins.py  test_agent_reasoning.py  test_agent_vertical.py  test_app_context.py  test_audit_actions.py  test_auth_oauth2_mtls.py  test_bm25_incremental.py  test_canary_guard.py  test_capability_profile.py  test_console_routes.py  test_console_v2.py  test_context_compress.py  test_data_analysis_vertical.py  test_embedding.py  test_eval_grader.py  test_eval_pipeline.py  test_execution_engine.py  test_execution_handle.py  test_experience_persistence.py  test_experience_plan_e2e.py  test_experience_run_store_plan_e2e.py  test_feedback.py  test_feedback_loop.py  test_feedback_loop_e2e.py  test_gateway_create_app.py  test_gateway_phase_q_routes.py  test_gateway_plan_execution_mode.py  test_gpu_scheduling.py  test_graph_runtime.py  test_harness_capability_gate.py  (+53 more)
(+139 files in other folders)
