[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "ai-platform-lab"
version = "0.1.0"
description = "Minimal AI platform lab: gateway, RAG pipeline, agent runtime (learning repo)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
  "qdrant-client>=1.12.0",
  "python-multipart>=0.0.9",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "redis>=5.0.0",
  "psycopg[binary]>=3.1.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"packages/contracts/rag_schemas.py" = ["UP042"]
"packages/auth/**" = ["E402"]
"packages/providers/registry.py" = ["E402"]
"tests/**" = ["E402"]
"**/__init__.py" = ["F401"]
