[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-platform-lab"
version = "0.1.0"
description = "Python SDK for AI Platform Lab"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ai", "platform", "sdk", "llm"]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2"]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "pydantic>=2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_platform_lab*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
