[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-platform-lab"
dynamic = ["version"]
description = "Python SDK for AI Platform Lab (chat, RAG, agent)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AI Platform Lab Contributors" }]
keywords = ["ai", "platform", "sdk", "llm", "rag", "agent", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/xingyun0812/ai-platform-lab"
Repository = "https://github.com/xingyun0812/ai-platform-lab"
Documentation = "https://github.com/xingyun0812/ai-platform-lab/tree/main/sdk/python"
Issues = "https://github.com/xingyun0812/ai-platform-lab/issues"

[project.optional-dependencies]
pydantic = ["pydantic>=2"]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "pydantic>=2",
    "build>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_platform_lab*"]

[tool.setuptools.dynamic]
version = { attr = "ai_platform_lab.__version__" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
